--- a/webpage/src/app/app.component.html
+++ b/webpage/src/app/app.component.html
@@ -1,2 +1,4 @@
 <app-nav></app-nav>
-<div class="MainContainer"><app-login></app-login></div>
+<div class="MainContainer">
+    <router-outlet></router-outlet>
+</div>
