--- a/webpage/src/app/login/login.component.html
+++ b/webpage/src/app/login/login.component.html
@@ -1,16 +1,30 @@
 <mat-card>
     <mat-tab-group>
         <mat-tab label="Login">
-            <form class="Login-form">
+            <form class="Login-form" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
                 <mat-form-field>
-                    <input matInput placeholder="Username">
+                    <label for="username">Username</label>
+                    <input matInput type="text" formControlName="username" class="form-control"
+                        [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
+                    <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
+                        <div *ngIf="f.username.errors.required">Username is required</div>
+                    </div>
                 </mat-form-field>
                 <br>
                 <mat-form-field>
-                    <input type="password" matInput placeholder="Password">
+                    <label for="password">Password</label>
+                    <input matInput type="password" formControlName="password" class="form-control"
+                        [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+                    <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+                        <div *ngIf="f.password.errors.required">Password is required</div>
+                    </div>
                 </mat-form-field>
                 <br>
-                <button mat-raised-button color="primary" >Sign in</button>
+                <button mat-raised-button color="primary" [disabled]="loading">
+                    <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                    Login
+                </button>
+                <div *ngIf="error" class="alert alert-danger mt-3 mb-0">{{error}}</div>
             </form>
         </mat-tab>
         <mat-tab label="Signup">
