Moved navi bar to app root

--- a/webpage/src/app/app.component.html
+++ b/webpage/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!-- <app-nav></app-nav> -->
+<mat-toolbar color="primary">t2ee</mat-toolbar>
 <div class="MainContainer">
     <router-outlet></router-outlet>
 </div>
