--- a/webpage/src/app/login/login.component.html
+++ b/webpage/src/app/login/login.component.html
@@ -1,35 +1,74 @@
 <mat-card>
     <mat-tab-group>
         <mat-tab label="Login">
-            <form class="Login-form" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+            <form class="Login-form" [formGroup]="loginForm" (ngSubmit)="onLoginSubmit()">
                 <mat-form-field>
                     <label for="username">Username</label>
                     <input matInput type="text" formControlName="username" class="form-control"
                         [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
-                    <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
-                        <div *ngIf="f.username.errors.required">Username is required</div>
-                    </div>
+                    
                 </mat-form-field>
+                <div *ngIf="submittedLogin && f.username.errors" class="invalid-feedback">
+                    <div *ngIf="f.username.errors.required">Username is required</div>
+                </div>
                 <br>
                 <mat-form-field>
                     <label for="password">Password</label>
                     <input matInput type="password" formControlName="password" class="form-control"
                         [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
-                    <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                        <div *ngIf="f.password.errors.required">Password is required</div>
-                    </div>
+                    
                 </mat-form-field>
+                <div *ngIf="submittedLogin && f.password.errors" class="invalid-feedback">
+                    <div *ngIf="f.password.errors.required">Password is required</div>
+                </div>
                 <br>
                 <button mat-raised-button color="primary" [disabled]="loading">
                     <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
                     Login
                 </button>
-                <div *ngIf="error" class="alert alert-danger mt-3 mb-0">{{error}}</div>
+                <div *ngIf="error" class="alert alert-danger mt-3 mb-0">{{errorLogin}}</div>
             </form>
         </mat-tab>
+
+
         <mat-tab label="Signup">
-            <h1>Some more tab content</h1>
-            <p>...</p>
+            <form [formGroup]="signupForm" (ngSubmit)="onSignupSubmit()">
+                <mat-form-field>
+                    <label for="username">Username</label>
+                    <input matInput type="text" formControlName="username" class="form-control"
+                        [ngClass]="{ 'is-invalid': submittedSignup && s.username.errors }" />
+                    
+                </mat-form-field>
+                <div *ngIf="submittedSignup && s.username.errors" class="invalid-feedback">
+                    <div *ngIf="s.username.errors.required">Username is required</div>
+                </div>
+                <br>
+                <mat-form-field>
+                    <label for="password">Password</label>
+                    <input matInput type="password" formControlName="password" class="form-control"
+                        [ngClass]="{ 'is-invalid': submittedSignup && s.password.errors }" />
+                    
+                </mat-form-field>
+                <div *ngIf="submittedSignup && s.password.errors" class="invalid-feedback">
+                    <div *ngIf="s.password.errors.required">Password is required</div>
+                </div>
+                <br>
+                <mat-form-field>
+                    <label for="email">Email</label>
+                    <input matInput type="text" formControlName="email" class="form-control"
+                        [ngClass]="{ 'is-invalid': submittedSignup && s.email.errors }" />
+                    
+                </mat-form-field>
+                <div *ngIf="submittedSignup && s.email.errors" class="invalid-feedback">
+                    <div *ngIf="s.email.errors.required">Email is required</div>
+                </div>
+                <br>
+                <button mat-raised-button color="primary" [disabled]="loading">
+                    <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                    Sign up
+                </button>
+                <div *ngIf="error" class="alert alert-danger mt-3 mb-0">{{errorSignup}}</div>
+            </form>
         </mat-tab>
     </mat-tab-group>
 </mat-card>
