--- a/webpage/src/app/app.component.html
+++ b/webpage/src/app/app.component.html
@@ -8,7 +8,17 @@
         <span class="example-spacer"></span>
         <span flex></span>
         <div>
-            <mat-icon aria-hidden="false" svgIcon="account" class="account-icon"></mat-icon>
+            <button mat-icon-button [matMenuTriggerFor]="menu">
+                <mat-icon aria-hidden="false" svgIcon="account" class="account-icon"></mat-icon>
+            </button>
+            <mat-menu #menu="matMenu">
+                <button mat-menu-item>
+                  <span>Settings</span>
+                </button>
+                <button mat-menu-item (click)="logout()">
+                  <span>Logout</span>
+                </button>
+              </mat-menu>
         </div>
     </mat-toolbar-row>
 
