--- a/webpage/src/app/login/login.component.html
+++ b/webpage/src/app/login/login.component.html
@@ -26,7 +26,7 @@
                     <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
                     Login
                 </button>
-                <div *ngIf="error" class="alert alert-danger mt-3 mb-0">{{errorLogin}}</div>
+                <div *ngIf="errorLogin" class="alert alert-danger mt-3 mb-0">{{errorLogin}}</div>
             </form>
         </mat-tab>
 
@@ -67,7 +67,7 @@
                     <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
                     Sign up
                 </button>
-                <div *ngIf="error" class="alert alert-danger mt-3 mb-0">{{errorSignup}}</div>
+                <div *ngIf="errorSignup" class="alert alert-danger mt-3 mb-0">{{errorSignup}}</div>
             </form>
         </mat-tab>
     </mat-tab-group>
