--- a/webpage/src/app/instance/instance.component.html
+++ b/webpage/src/app/instance/instance.component.html
@@ -1,8 +1,11 @@
 <mat-card>
     <mat-card-header>
-        
+        {{instance.name}}
     </mat-card-header>
+    <mat-card-content>
+        {{instance.status}}
+    </mat-card-content>
     <mat-card-actions>
-        
+
     </mat-card-actions>
 </mat-card>
