--- a/webpage/src/app/app.component.html
+++ b/webpage/src/app/app.component.html
@@ -2,7 +2,7 @@
     <mat-toolbar-row>
         <h1>Yet Another VPS</h1>
         <div>
-            <a mat-button> Deploy </a>
+            <a mat-button [routerLink]="['deploy']"> Deploy </a>
             <a mat-button> Images </a>
         </div>
         <span class="example-spacer"></span>
