Added deployment page

--- a/webpage/src/app/deploy/deploy.component.html
+++ b/webpage/src/app/deploy/deploy.component.html
@@ -1,27 +1,39 @@
 <form class="Deploy-form" [formGroup]="deployForm" (ngSubmit)="onDeploySubmit()">
     <mat-form-field>
-        <label for="username">Username</label>
-        <input matInput type="text" formControlName="username" class="form-control"
-            [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
-        
+        <label for="image">Image</label>
+        <mat-select formControlName="image">
+            <mat-option *ngFor="let image of images" [value]="image">
+                {{image}}
+            </mat-option>
+        </mat-select>
     </mat-form-field>
-    <div *ngIf="submittedLogin && f.username.errors" class="invalid-feedback">
-        <div *ngIf="f.username.errors.required">Username is required</div>
-    </div>
     <br>
     <mat-form-field>
-        <label for="password">Password</label>
-        <input matInput type="password" formControlName="password" class="form-control"
-            [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+        <label for="flavor">Flavor</label>
+        <mat-select formControlName="flavor">
+            <mat-option *ngFor="let flavor of flavors" [value]="flavor">
+                {{flavor}}
+            </mat-option>
+        </mat-select>
+    </mat-form-field>
+    <br>
+    <mat-form-field>
+        <label for="instance_name">Instance Name</label>
+        <input matInput type="text" formControlName="instance_name" class="form-control"
+            [ngClass]="{ 'is-invalid': submitted && f.instance_name.errors }" />
         
     </mat-form-field>
-    <div *ngIf="submittedLogin && f.password.errors" class="invalid-feedback">
-        <div *ngIf="f.password.errors.required">Password is required</div>
-    </div>
+    <br>
+    <mat-form-field>
+        <label for="root_password">root_password Name</label>
+        <input matInput type="password" formControlName="root_password" class="form-control"
+            [ngClass]="{ 'is-invalid': submitted && f.root_password.errors }" />
+        
+    </mat-form-field>
     <br>
     <button mat-raised-button color="primary" [disabled]="loading">
         <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-        Login
+        Deploy
     </button>
     <div *ngIf="errorLogin" class="alert alert-danger mt-3 mb-0">{{errorLogin}}</div>
 </form>
