Display IP in home page

--- a/webpage/src/app/instance/instance.component.html
+++ b/webpage/src/app/instance/instance.component.html
@@ -5,6 +5,7 @@
     <br>
     <mat-card-content>
         <p>Status: {{instance.status}}</p>
+        <p>IP: {{instance.ip}}</p>
     </mat-card-content>
     <br>
     <mat-card-actions>
