--- a/webpage/src/app/setting/setting.component.html
+++ b/webpage/src/app/setting/setting.component.html
@@ -1,13 +1,9 @@
 <div>
     <h2>Update Public Key</h2>
-    <form [formGroup]="pubkeyForm">
-        <mat-form-field>
-            <textarea formControlName = "pubkey" 
-            matInput
-            cdkTextareaAutosize
-            #autosize="cdkTextareaAutosize"
-            cdkAutosizeMinRows="1"
-            cdkAutosizeMaxRows="100"></textarea>
+    <form [formGroup]="pubkeyForm" (ngSubmit)="onPubkeySubmit()">
+        <mat-form-field style="width: 100%">
+            <textarea formControlName="pubkey" matInput cdkTextareaAutosize cdkAutosizeMinRows="1"
+                cdkAutosizeMaxRows="100"></textarea>
         </mat-form-field>
         <br>
         <button mat-raised-button color="primary" [disabled]="loading">
