Added dialog to get data for image creation

--- a/webpage/src/app/instance/instance.component.html
+++ b/webpage/src/app/instance/instance.component.html
@@ -12,7 +12,7 @@
             <button mat-menu-item>
                 <span>Transfer</span>
             </button>
-            <button mat-menu-item>
+            <button mat-menu-item (click)="openImageDialog()">
                 <span>Create Image</span>
             </button>
         </mat-menu>
