enable image route link

--- a/webpage/src/app/app.component.html
+++ b/webpage/src/app/app.component.html
@@ -4,7 +4,7 @@
         <div>
             <a mat-button [routerLink]="['']"> Home </a>
             <a mat-button [routerLink]="['deploy']"> Deploy </a>
-            <a mat-button> Images </a>
+            <a mat-button [routerLink]="['image']"> Images </a>
         </div>
         <span class="example-spacer"></span>
         <span flex></span>
