Added dialog to deploy from image

--- a/webpage/src/app/image/image-item/image-item.component.html
+++ b/webpage/src/app/image/image-item/image-item.component.html
@@ -22,7 +22,7 @@
     <br>
     <mat-card-actions>
         <section layout="row">
-            <button mat-button (click)="start()">Start</button>
+            <button mat-button (click)="openImageDialog()">Deploy</button>
         </section>
     </mat-card-actions>
 </mat-card>
