--- a/webpage/src/app/app.component.html
+++ b/webpage/src/app/app.component.html
@@ -2,7 +2,7 @@
     <mat-toolbar-row>
         <h1>Yet Another VPS</h1>
         <div>
-            <a mat-button [routerLink]="['']"> Home </a>
+            <a mat-button [routerLink]="['']"> Your Instances </a>
             <a mat-button [routerLink]="['deploy']"> Deploy </a>
             <a mat-button [routerLink]="['image']"> Images </a>
         </div>
