--- a/webpage/src/app/image/image-item/image-item.component.html
+++ b/webpage/src/app/image/image-item/image-item.component.html
@@ -23,6 +23,7 @@
     <mat-card-actions>
         <section layout="row">
             <button mat-button (click)="openImageDialog()">Deploy</button>
+            <button mat-button color="warn" (click)="delete()" *ngIf="deletable">Delete</button>
         </section>
     </mat-card-actions>
 </mat-card>
